# 20250727-langchain-note

./: .gitignore  .python-version  README.md  config.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_eval.txt
01_basic/: 01_Gemini_APIKey.ipynb  02-Gemini-LLM.ipynb  03_LCEL.ipynb  04_LCEL_Advanced.ipynb  05_Runnable.ipynb
02_Prompt/: 01_PromptTemplate.ipynb  02_FewshotTemplates_1.ipynb  02_FewshotTemplates_2.ipynb  03_LangChain_Hub.ipynb  03_LangChain_Hub_1.ipynb  03_LangChain_Hub_2.ipynb  03_LangChain_Hub_3.ipynb  03_LangChain_Hub_4.ipynb  03_LangChain_Hub_5.ipynb
04_Model/: 01_Chat-Models_1.ipynb  01_Chat-Models_2.ipynb  02_Cache.ipynb  03_ModelSerialization.ipynb  04_TokenUsage.ipynb  fruit_chain.json  fruit_chain.pkl
05_Memory/: 01_ConversationBufferMemory.ipynb  02_ConversationBufferWindowMemory.ipynb  03_ConversationTokenBufferMemory.ipynb  04_ConversationEntityMemory.ipynb  05_ConversationKnowledgeGraph.ipynb  06_ConversationSummary.ipynb  07_VectorStoreRetrieverMemory.ipynb  08_LCEL_add_memory.ipynb  09_Memory_using_SQLite.ipynb  10_Conversation_With_History.ipynb  sqlite.db
06_Document_Loader/: 00_Document_Loader.ipynb  01_PDF_Loader.ipynb  02_HWP-Loader.ipynb  03_CSV_Loader.ipynb  04_Excel_Loader.ipynb  05_Word_Loader.ipynb  06_PowerPoint_Loader.ipynb  07_WebBase_Loader.ipynb  08_TXT_Loader.ipynb  09_JSON_Loader.ipynb  10_Arxiv_Loader.ipynb  11_Directory_Loader.ipynb  12_UpstageLayoutAnalysisLoader.ipynb  13_LlamaParser.ipynb  custom_hwp_loader.py  custom_hwp_loader2.py
07_Text_Splitter/: 00_Text_Spiltter.ipynb  01_CharacterTextSplitter.ipynb  02_RecursiveCharacterTextSplitter.ipynb  03_TokenTextSplitter.ipynb  04_SemanticChunker.ipynb  05_CodeSplitter.ipynb  06_MarkdownHeaderTextSplitter.ipynb  07_HTMLHeaderTextSplitter.ipynb  08_RecursiveJsonSplitter.ipynb
08_Embedding/: 01_OpenAIEmbeddings.ipynb  02_CacheBackedEmbeddings.ipynb  text_utils.py
09_VectorStore/: 01_Chroma_1.ipynb  01_Chroma_2.ipynb  02_FAISS.ipynb  image_descriptions.json  image_descriptions2.json
10_Retriever/: 01_VectorStoreRetriever.ipynb  02_ContextualCompressionRetriever.ipynb  03_EnsembleRetriever.ipynb  04_LongContextReorder_1.ipynb  04_LongContextReorder_2.ipynb  05_ParentDocumentRetriever.ipynb  06_MultiQueryRetriever.ipynb  07_MultiVectorRetriever_1.ipynb  07_MultiVectorRetriever_2.ipynb  08_SelfQueryRetriever.ipynb  09_TimeWeightedVectorStoreRetriever.ipynb  10_Kiwi_BM25Retriever.ipynb  11_CC_EnsembleRetriever.ipynb
11_Reranker/: 01_Cross_Encoder_Reranker.ipynb  02_Cohere_Reranker.ipynb  03_Jina_Reranker.ipynb  04_FlashRank_Reranker.ipynb
12_RAG/: 00_RAG-Basic-PDF.ipynb  01_RAG-Basic-Webloader.ipynb  02_RAG-Advanced.ipynb  03_Conversation-With-History.ipynb  (+3 more)
(+141 files in other folders)
