[project]
name = "20250727-langchain-note"
version = "0.1.0"
description = "I plan to study that book and practice LangChain and LangGraph."
authors = [
    { name = "teddy", email = "teddylee777@gmail.com" },            # 책 저자
    { name = "jjaayy2222", email = "your-email@example.com" }       # 연습중인 User
]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11" # Python 3.11.x

# langchain 관련 라이브러리들
langchain = "*"
langchain-core = "*"
langchain-experimental = "*"
langchain-community = "*"
langchain-openai = "*"
langchain-anthropic = "*"
langchain-text-splitters = "*"
langchain-elasticsearch = "*"
langchain-chroma = "*"
langchain-cohere = "*"
langchain-milvus = "*"
#langchain-google-genai = "*"
#langgraph-google-genai = "*"


# Google Gemini 관련 라이브러리 (매우 중요!)
#google-generativeai = "*"           # 최신 버전을 가져오도록 *로 설정
#google-generativeai = ">=1.0.1"

# 나머지 requirements.txt 내용 (버전은 *로 하거나 ^으로 안정적인 최신 버전 지정)
huggingface-hub = "*"
openai = "*"
deepl = "*"
kiwipiepy = "*"
konlpy = "*"

# 데이터 처리 및 분석 관련 패키지
pandas = "*"
rank-bm25 = "*"

# 데이터베이스 및 캐시 관련 패키지
redis = "*"
chromadb = "*"

# PDF 및 파일 처리 관련 패키지
pymupdf = "*"
pypdf = "*"
pdfplumber = "*"
pdfminer-six = "*"
pymupdf4llm = "*"

# 시각화 및 사용자 인터페이스 관련 패키지
matplotlib = "*"
streamlit = "*"
jupyter = "*"
notebook = "*"

# 딥러닝 및 머신러닝 관련 패키지
torch = "*"
torchvision = "*"
faiss-cpu = "*"
open-clip-torch = "*"

# 기타 유틸리티 및 필수 패키지
python-dotenv = "*"
pydantic = "*"
lxml = "*"
pillow = "*"
lark = "*"
ragas = "*"
unstructured = {version = "0.*", extras = ["all-docs"]}
arxiv = "*"
tiktoken = "*"
tenacity = "*"
pymilvus = "*"
google-search-results = "*"
protobuf = "*"
sqlalchemy = "*"
llama-index-core = "*"
llama-parse = "*"
llama-index-readers-file = "*"
flashrank = "*"
docx2txt = "*"
nest-asyncio = "*"
rapidocr-onnxruntime = "*"
seaborn = "*"
grandalf = "*"
rouge-score = "*"
langchain-ollama = "*"
mypy = "*"
pinecone = "*"
wikipedia = "*"
scikit-learn = "*"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
