[project]
name = "20250727-langchain-note"
version = "0.1.0"
description = "first_version_copy"
authors = [
    {name = "jjaayy2222",email = "qkfkadmlEkf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "langchain (>=1.0.2,<2.0.0)",
    "langchain-core (>=1.0.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "poetry add $(cat requirements"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
